git@github.com:DiegoAnguloC/Sitio-Personal.git

--- a/diego/Gustos/gustosculturales.html
+++ b/diego/Gustos/gustosculturales.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cultura</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header class="title2">
     <h1>Gustos Culturales</h1>
-    <p>Bueno en si me gustan hechos/historias mitologicas, que sean curiosas e interesantes, como la mitologia griega, nordica y hechos biblicos (independiente si son reales o no). Me gustan distintos estilos artisticos, como impresionismo, surrealista e incluso simples bosquejos cargados de lineas </p>
-    <p>Me interesa algo esas historias del susodicho 'horror cosmico', llaman mucho la atencion y aparte, suelen tener buenas historias.</p>
-    <p>Muy fascinado con el estilo 'Cyberpunk' ultimamente.</p>
+</header>
+<body class="dif">
+    <section class="main">
+        <img src="/imgs/battle-between-gods-and-titans-public-domain-1024x785-4111895006.jpg" alt="Titanomaquia">
+        <p>Bueno en si me gustan hechos/historias mitologicas, 
+            que sean curiosas e interesantes, como la mitologia griega, 
+            nordica y hechos biblicos (independiente si son reales o no). 
+            Me gustan distintos estilos artisticos, como impresionismo, 
+            surrealista e incluso 
+            simples bosquejos cargados de lineas </p>
+    </section>
+    <section class="main2">
+        <img src="/imgs/file-6802215.jpg" alt="">
+        <p>Me interesa algo esas historias del susodicho 'horror cosmico', 
+            llaman mucho la atencion y aparte, 
+            suelen tener buenas historias.</p>
+    </section>
+    <section class="main3">
+        <img src="/imgs/wallpapersden.com_droid-girl-new-cyberpunk-art-1920x1080.jpg" alt="">
+        <p>Muy fascinado con el estilo 'Cyberpunk' ultimamente.</p>
+    </section>
+    
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
