--- a/diego/Gustos/gustosmusicales.html
+++ b/diego/Gustos/gustosmusicales.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>musicaydemas</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>Mis gustos musicales</h1>
-
-    <p>Me gusta mucho la musica electronica, ultimamente el genero de 'Drum & Bass', alguna musica ochentera... que esas suelen ser mas relajadas</p>
-    Si tengo algun grupo o banda favorita, este seria Pendulum.
+</header>
+<body>
+    <section class="main">
+        <img src="/imgs/RunYou.jpg" alt="">
+        <p>Me gusta mucho la musica electronica, 
+            ultimamente el género 'Drum & Bass', 
+            debido a su ritmo acelerado con mucha
+            adrenalina.    
+        </p>
+        
+    </section>
+    <section class="main3">
+        <img src="/imgs/maxresdefault.jpg" alt="">
+        <p>Si tengo algun grupo o banda favorita, 
+            este sin duda sería Pendulum.</p>
+    </section>
 
     <nav>
         <ul>
