--- a/diego/Gustos/gustosresumido.html
+++ b/diego/Gustos/gustosresumido.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mmm</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+<header>
+    <h1>
+        <h1>Gustos gustosos</h1>
+    </h1>
+</header>
 <body>
-    <h1>Gustos gustosos</h1>
-    <p>Para empezar... me gusta bastante la historia y mitologias. En cuanto a musica, soy algo variado... creo.</p>
+    <section class="main2">
+        <p>Para empezar... me gusta bastante la historia y mitologias.
+            En cuanto a musica, soy algo variado... creo.</p>
+    </section>
+    
     <nav>
         <ul>
-            <li><a href="../Gustos/gustosmusicales.html">A ver si se de musica...</a></li>
-            <li><a href="../Gustos/gustosculturales.html">Mis gustos culturales</a></li>
+            <li><a href="../Gustos/gustosmusicales.html"> >A ver si se de musica...</a></li>
+            <li><a href="../Gustos/gustosculturales.html"> >Mis gustos culturales</a></li>
         </ul>
     </nav>
     <nav>
