--- a/diego/Hobbies/hobbies.html
+++ b/diego/Hobbies/hobbies.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hobb</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>Pasatiempos y aficiones</h1>
-    <p>Dibujo figuras sin sentido a algo bien hecho por aburrimiento, solia editar videos como una forma de relajar el estres. </p>
-    <p>Disfruto de videojuegos en mi tiempo libre</p>
+</header>
+<body>
+    <section class="main2">
+        <img src="/imgs/editing_video.jpg" alt="">
+        <p>Dibujo figuras sin sentido a algo bien hecho por 
+            aburrimiento, solia editar videos como una forma 
+            de relajar el estrés. 
+            Disfruto de videojuegos en mi tiempo libre</p>
+    </section>
+    <section class="minim">
+        <p>Aqui algunos de mis juegos favoritos:</p>
+            <img src="/imgs/ViceCity.jpg" alt="">
+            <img src="/imgs/AssassinsCreedII.jpg" alt="">
+            <img src="/imgs/FalloutNV.jpg" alt="">
+        
+    </section>
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
