--- a/diego/infogeneral/amigos.html
+++ b/diego/infogeneral/amigos.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>friends</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>Amigos</h1>
-    <p>Que se puede decir, estan los amigos y los AMIGOS.
-        la mayoria son buena gente y van bien o tratan de estar
+</header>
+<body>
+    <section class="main3">
+        <p>Que se puede decir, estan los amigos y los AMIGOS.
+        La mayoria son buena gente y van bien o tratan de estar
         en el dia a dia.
-    </p>
+        </p>
+        
+    </section>
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
