--- a/diego/infogeneral/familia.html
+++ b/diego/infogeneral/familia.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fam</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>Familia</h1>
-    <p>Mi familia es de cuatro personas. Un padre, una madre y un hermano mayor... los cuales me criaron a su modo. 
+</header>
+<body>
+    <section class="main2">
+        <p>Mi familia es de cuatro personas. Un padre, una madre y un hermano mayor... los cuales me criaron a su modo. 
         Por algo soy como soy, no se si decir que hicieron buen trabajo o no.
         Igual quiero a mi familia, aunque mi cara no lo demuestre.</p>
+    </section>
+    
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
