--- a/diego/infogeneral/infogeneral.html
+++ b/diego/infogeneral/infogeneral.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>info</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>Mi entorno</h1>
+</header>
+<body>
+    <section class="main">
+        <p>Mi entorno social es tan limitado como papel higienico en el
+            2020.
+        </p>
+        
+    </section>
     <nav>
         <ul>
-            <li><a href="../infogeneral/familia.html">Acerca de mi familia</a></li>
-            <li><a href="../infogeneral/amigos.html">Mis amigos</a></li>
-            <li><a href="../infogeneral/mascotas.html">¿Cual mascota?</a></li>
+            <li><a href="../infogeneral/familia.html"> >Acerca de mi familia</a></li>
+            <li><a href="../infogeneral/amigos.html"> >Mis amigos</a></li>
+            <li><a href="../infogeneral/mascotas.html"> >¿Cual mascota?</a></li>
         </ul>
     </nav>
     <nav>
