--- a/diego/infogeneral/mascotas.html
+++ b/diego/infogeneral/mascotas.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<header>
     <h1>¿Cuál mascota?</h1>
-    <p>No tengo mascota.</p>
+</header>
+<body>
+    <section class="mainalt">
+        <p>No tengo mascota.</p>
+        
+    </section>
+    <audio controls>
+        <source src="/audio/violin-pequeno.ogg" type="audio/ogg">
+        <source src="/audio/violin-pequeno.mp3" type="audio/mpeg">
+        
+    </audio>
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
@@ -15,4 +26,5 @@
         </ul>
     </nav>
 </body>
+
 </html>
