Cambios de Ernesto

--- a/src/Gustos/gustosresumido.html
+++ b/src/Gustos/gustosresumido.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mmm</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <header>
     <h1>
@@ -19,8 +19,8 @@
     
     <nav>
         <ul>
-            <li><a href="../Gustos/gustosmusicales.html"> >A ver si se de musica...</a></li>
-            <li><a href="../Gustos/gustosculturales.html"> >Mis gustos culturales</a></li>
+            <li><a href="gustosmusicales.html"> >A ver si se de musica...</a></li>
+            <li><a href="gustosculturales.html"> >Mis gustos culturales</a></li>
         </ul>
     </nav>
     <nav>
@@ -30,3 +30,5 @@
     </nav>
 </body>
 </html>
+
+
