--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myself</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <header>
     <h1>Mi nombre es Diego Angulo</h1>
@@ -12,7 +12,7 @@
 <body>  
     <div class="main">
         <div class="sub">
-            <img src="/imgs/yo.jpg" alt="autoretrato-mal-hecho">
+            <img src="imgs/yo.jpg" alt="autoretrato-mal-hecho">
             <h4>Autoretrato mal hecho por mi mismo</h4>
         </img>
         </div>
@@ -26,9 +26,9 @@
     
     <nav>
         <ul>
-            <li><a href="../Gustos/gustosresumido.html"> >>Mis gustos<< </a></li>
-            <li><a href="../Hobbies/hobbies.html"> >>Mis hobbies<< </a></li>
-            <li><a href="../infogeneral/infogeneral.html"> >>Mi entorno<< </a></li>
+            <li><a href="Gustos/gustosresumido.html"> >>Mis gustos<< </a></li>
+            <li><a href="Hobbies/hobbies.html"> >>Mis hobbies<< </a></li>
+            <li><a href="infogeneral/infogeneral.html"> >>Mi entorno<< </a></li>
         </ul>
     </nav>
     
