--- a/src/gustos/gustosculturales.html
+++ b/src/gustos/gustosculturales.html
@@ -33,7 +33,7 @@
     <nav>
         <ul>
             <li><a href="../index.html"> << Volver al inicio </a></li>
-            <li><a href="../Gustos/gustosresumido.html"> < Volver a gustos gustosos </a></li>
+            <li><a href="../gustos/gustosresumido.html"> < Volver a gustos gustosos </a></li>
         </ul>
     </nav>
 </body>
