git@github.com:DiegoAnguloC/Sitio-Personal.git

--- a/src/gustos/gustosmusicales.html
+++ b/src/gustos/gustosmusicales.html
@@ -19,7 +19,7 @@
         </p>
         
     </section>
-    <section class="main3">
+    <section class="main">
         <img src="/imgs/maxresdefault.jpg" alt="">
         <p>Si tengo algun grupo o banda favorita, 
             este sin duda sería Pendulum.</p>
