--- a/src/gustos/gustosresumido.html
+++ b/src/gustos/gustosresumido.html
@@ -6,26 +6,23 @@
     <title>mmm</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<header>
-    <h1>
-        <h1>Gustos gustosos</h1>
-    </h1>
-</header>
+
 <body>
-    <section class="main2">
+    <section class="main">
+        <header>
+            <h1>
+                <h1>Gustos gustosos</h1>
+            </h1>
+        </header>
         <p>Para empezar... me gusta bastante la historia y mitologias.
             En cuanto a musica, soy algo variado... creo.</p>
     </section>
     
     <nav>
         <ul>
-            <li><a href="gustosmusicales.html"> >A ver si se de musica...</a></li>
-            <li><a href="gustosculturales.html"> >Mis gustos culturales</a></li>
-        </ul>
-    </nav>
-    <nav>
-        <ul>
-            <li><li><a href="../index.html"> << Volver al inicio </a></li></li>
+            <li><a href="gustosmusicales.html"> A ver si se de musica...</a></li>
+            <li><a href="gustosculturales.html"> Mis gustos culturales</a></li>
+            <li><a href="../index.html">  Volver al inicio </a></li>
         </ul>
     </nav>
 </body>
