--- a/src/infogeneral/amigos.html
+++ b/src/infogeneral/amigos.html
@@ -11,16 +11,44 @@
 </header>
 <body>
     <section class="main3">
-        <p>Que se puede decir, estan los amigos y los AMIGOS.
-        La mayoria son buena gente y van bien o tratan de estar
-        en el dia a dia.
+        <p>A mis amigos los voy a mencionar con apodos o diminutivos. <br>
+            <br> <b>Nico</b>: Amigo de colegio, cometió crímenes inimaginables
+            como arrancar las hojas de la agenda del colegio,
+            responderle a la profe que estaba diciendo
+            cosas obvias (en ese lo apoyo), romperse una pata, etc.
+            Aún mantengo contacto con él.
+            <br>
+            <br>
+            <b>Guti/Don Chuma</b>: Un peruano loco con cara de santo, habilidoso con la
+            guitarra, sabía editar y grabar videos de gran calidad;
+            aparte de que era muy inteligente, aunque no pareciese en un primer
+            instante. Compartíamos el mismo nombre y solía 
+            hablarle, pero perdí contacto.
+            <br>
+            <br>
+            <b>Don Cheto</b>: Un tipo que conocí en la U, él simplemente
+            es un tipo que la definición de su existencia sería un pucho
+            a medio fumar, ambos empezamos al mismo tiempo nuestras carreras,
+            aunque él se cambio a Diseño Gráfico, por que no soportó el
+            sufrimiento de aprender a programar. Un tipazo, ya que
+            compartimos el mismo sentido del humor. Es un artista deprimido.
+            <br>
+            <br>
+            <b>Elmer</b>: Al igual que el anterior, es un tipazo. Aparenta
+            ser calmado, pero en realidad es un caótico desgraciado. Hablamos
+            poco por las distintas carreras.
+            <br>
+            <br>
+            No son los únicos, pero no puedo añadir a todos los que conozco.
+            Solo diré que la mayoría son personas calmadas.
+
         </p>
         
     </section>
     <nav>
         <ul>
-            <li><a href="../index.html"> << Volver al inicio </a></li>
-            <li><a href="../infogeneral/infogeneral.html"> < Volver atras </a></li>
+            <li><a href="../index.html">  Volver al inicio </a></li>
+            <li><a href="../infogeneral/familia.html">  Volver atras </a></li>
         </ul>
     </nav>
 </body>
