--- a/src/infogeneral/infogeneral.html
+++ b/src/infogeneral/infogeneral.html
@@ -6,26 +6,29 @@
     <title>info</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<header>
-    <h1>Mi entorno</h1>
-</header>
+
 <body>
-    <section class="main">
-        <p>Mi entorno social es tan limitado como papel higienico en el
+    <div class="main">
+        <header>
+            <h1>Mi entorno</h1>
+        </header>
+        <p>Mi entorno social es tan limitado 
+            como papel higienico en el
             2020.
         </p>
-        
-    </section>
+    </div>
     <nav>
         <ul>
-            <li><a href="../infogeneral/familia.html"> >Acerca de mi familia</a></li>
-            <li><a href="../infogeneral/amigos.html"> >Mis amigos</a></li>
-            <li><a href="../infogeneral/mascotas.html"> >¿Cual mascota?</a></li>
+            <h2>Mas:</h2>
+            
+        </ul>
+        <ul>
+            <li><a href="../infogeneral/familia.html"> Acerca de mi familia</a></li>
+            <li><a href="../infogeneral/amigos.html"> Mis amigos</a></li>
+            <li><a href="../infogeneral/mascotas.html"> ¿Cual mascota?</a></li>
+            <li><a href="../index.html"> Volver al inicio </a></li>
         </ul>
     </nav>
-    <nav>
-        <ul>
-            <li><a href="../index.html"> << Volver al inicio </a></li>
-    </nav>
+  
 </body>
 </html>
