--- a/src/hobbies/hobbies.html
+++ b/src/hobbies/hobbies.html
@@ -10,7 +10,7 @@
     <h1>Pasatiempos y aficiones</h1>
 </header>
 <body>
-    <section class="main2">
+    <section class="main">
         <img src="/imgs/editing_video.jpg" alt="">
         <p>Dibujo figuras sin sentido a algo bien hecho por 
             aburrimiento, solia editar videos como una forma 
@@ -26,7 +26,7 @@
     </section>
     <nav>
         <ul>
-            <li><a href="../index.html"> << Volver al inicio </a></li>
+            <li><a href="../index.html">  Volver al inicio </a></li>
         </ul>
     </nav>
 </body>
