git@github.com:DiegoAnguloC/Sitio-Personal.git

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>  
+    <header>
+        <h1>Mi nombre es Diego Angulo</h1>
+    </header>
     <div class="main">
-        <header>
-            <h1>Mi nombre es Diego Angulo</h1>
-        </header>
+        
         <div class="sub">
             <img src="imgs/yo.jpg" alt="autoretrato-mal-hecho">
         </div>
@@ -32,9 +33,11 @@
                 <h2>Mas de mi:</h2>
             </ul>
             <ul>
-                <li><a href="gustos/gustosresumido.html"> Mis gustos </a></li>
+                <li><a href="gustos/gustosculturales.html"> Mis gustos </a></li>
                 <li><a href="hobbies/hobbies.html"> Mis hobbies </a></li>
                 <li><a href="infogeneral/familia.html"> Mi entorno </a></li>
+                <li><a href="ejercicio_maquetacion/index.html"Trabajo #1</a></li>
+                <li><a href="grid/index.html">Trabajo #2</a></li>
             </ul>
         </nav>
     </div>
