git@github.com:DiegoAnguloC/Sitio-Personal.git

--- a/src/gustos/gustosculturales.html
+++ b/src/gustos/gustosculturales.html
@@ -12,7 +12,7 @@
         <h1>Gustos</h1>
     </header>
     <section class="main">
-        <h1>Gustos Musicales</h1>
+        <h1>Gustos Culturales</h1>
         <div class="imgd">
             <img src="/imgs/battle-between-gods-and-titans-public-domain-1024x785-4111895006.jpg" alt="Titanomaquia">
             <img src="/imgs/Marduk_and_pet.jpg" alt="Marduk, dios babilonico">
