--- a/src/infogeneral/amigos.html
+++ b/src/infogeneral/amigos.html
@@ -19,30 +19,29 @@
             Aún mantengo contacto con él.
             <br>
             <br>
-            <b>Guti/Don Chuma</b>: Un peruano loco con cara de santo, habilidoso con la
+            
+
+        </p>
+        <p><b>Guti/Don Chuma</b>: Un peruano loco con cara de santo, habilidoso con la
             guitarra, sabía editar y grabar videos de gran calidad;
             aparte de que era muy inteligente, aunque no pareciese en un primer
             instante. Compartíamos el mismo nombre y solía 
             hablarle, pero perdí contacto.
             <br>
-            <br>
-            <b>Don Cheto</b>: Un tipo que conocí en la U, él simplemente
+            <br></p>
+        <p><b>Don Cheto</b>: Un tipo que conocí en la U, él simplemente
             es un tipo que la definición de su existencia sería un pucho
             a medio fumar, ambos empezamos al mismo tiempo nuestras carreras,
             aunque él se cambio a Diseño Gráfico, por que no soportó el
             sufrimiento de aprender a programar. Un tipazo, ya que
             compartimos el mismo sentido del humor. Es un artista deprimido.
             <br>
-            <br>
-            <b>Elmer</b>: Al igual que el anterior, es un tipazo. Aparenta
+            <br></p>
+        <p><b>Elmer</b>: Al igual que el anterior, es un tipazo. Aparenta
             ser calmado, pero en realidad es un caótico desgraciado. Hablamos
             poco por las distintas carreras.
             <br>
-            <br>
-            No son los únicos, pero no puedo añadir a todos los que conozco.
-            Solo diré que la mayoría son personas calmadas.
-
-        </p>
+            <br></p>
         
     </section>
     <nav>
