git@github.com:DiegoAnguloC/Sitio-Personal.git

--- a/src/hobbies/hobbies.html
+++ b/src/hobbies/hobbies.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hobb</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <header>
     <h1>Pasatiempos y aficiones</h1>
 </header>
 <body>
     <section class="main">
-        <img src="/imgs/editing_video.jpg" alt="">
+        <img src="../imgs/editing_video.jpg" alt="">
         <p>Dibujo figuras sin sentido a algo bien hecho por 
             aburrimiento, solia editar videos como una forma 
             de relajar el estrés. 
@@ -20,9 +20,9 @@
     </section>
     <section class="minim">
             
-            <img src="/imgs/ViceCity.jpg" alt="GTA Vice City"> 
-            <img src="/imgs/AssassinsCreedII.jpg" alt="">
-            <img src="/imgs/FalloutNV.jpg" alt="">
+            <img src="../imgs/ViceCity.jpg" alt="GTA Vice City">
+            <img src="../imgs/AssassinsCreedII.jpg" alt="">
+            <img src="../imgs/FalloutNV.jpg" alt="">
         
     </section>
     <nav>
