--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                 <li><a href="gustos/gustosculturales.html"> Mis gustos </a></li>
                 <li><a href="hobbies/hobbies.html"> Mis hobbies </a></li>
                 <li><a href="infogeneral/familia.html"> Mi entorno </a></li>
-                <li><a href="ejercicio_maquetacion/index.html">Trabajo #1</a></li>
+                <li><a href="index2.html">Trabajo #1</a></li>
                 <li><a href="grid/index.html">Trabajo #2</a></li>
             </ul>
         </nav>
