--- a/src/infogeneral/mascotas.html
+++ b/src/infogeneral/mascotas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
     <section class="main2">
         <h2>No tengo mascota.</h2>
         <audio controls>
-            <source src="/audio/violin-pequeno.ogg" type="audio/ogg">
-            <source src="/audio/violin-pequeno.mp3" type="audio/mpeg">
+            <source src="../audio/violin-pequeno.ogg" type="audio/ogg">
+            <source src="../audio/violin-pequeno.mp3" type="audio/mpeg">
         </audio>
         
     </section>
